Cambios en servicio de pesaje para planta 3

--- a/WOW-Fusion/WOW-Fusion.csproj
+++ b/WOW-Fusion/WOW-Fusion.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Models\Batchs.cs" />
     <Compile Include="Models\Payloads.cs" />
     <Compile Include="Models\WorkOrderShedule.cs" />
+    <Compile Include="Services\ApexService.cs" />
     <Compile Include="Views\Plant1\frmLoginP1.cs">
       <SubType>Form</SubType>
     </Compile>
