--- a/WOW-Fusion/WOW-Fusion.csproj
+++ b/WOW-Fusion/WOW-Fusion.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{68B5FA7F-6410-4DBE-92E9-D9C64B01CE02}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>WOW_Fusion</RootNamespace>
-    <AssemblyName>PL1 Labels</AssemblyName>
+    <AssemblyName>WOW Fusion</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
