--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -73,7 +73,16 @@
         <value>1</value>
       </setting>
       <setting name="WeightStdP3" serializeAs="String">
-        <value>100</value>
+        <value>1000</value>
+      </setting>
+      <setting name="CoreMaxWeight" serializeAs="String">
+        <value>9</value>
+      </setting>
+      <setting name="TareMaxWeight" serializeAs="String">
+        <value>26</value>
+      </setting>
+      <setting name="TareMinWeight" serializeAs="String">
+        <value>11</value>
       </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
