--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -63,16 +63,13 @@
       <setting name="ResourceId2" serializeAs="String">
         <value>300000003822457</value>
       </setting>
-      <setting name="Environment" serializeAs="String">
-        <value>0</value>
-      </setting>
       <setting name="ResourceId3" serializeAs="String">
         <value>300000003969053</value>
       </setting>
-      <setting name="BagToPrint" serializeAs="String">
+      <setting name="SackToPrint" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="WeightStdP3" serializeAs="String">
+      <setting name="SackMaxWeight" serializeAs="String">
         <value>1000</value>
       </setting>
       <setting name="CoreMaxWeight" serializeAs="String">
@@ -83,6 +80,9 @@
       </setting>
       <setting name="TareMinWeight" serializeAs="String">
         <value>11</value>
+      </setting>
+      <setting name="BagMaxWeight" serializeAs="String">
+        <value>10</value>
       </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
