--- a/WOW-Fusion/Properties/Settings.settings
+++ b/WOW-Fusion/Properties/Settings.settings
@@ -38,16 +38,13 @@
     <Setting Name="ResourceId2" Type="System.String" Scope="User">
       <Value Profile="(Default)">300000003822457</Value>
     </Setting>
-    <Setting Name="Environment" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
     <Setting Name="ResourceId3" Type="System.String" Scope="User">
       <Value Profile="(Default)">300000003969053</Value>
     </Setting>
-    <Setting Name="BagToPrint" Type="System.Int32" Scope="User">
+    <Setting Name="SackToPrint" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="WeightStdP3" Type="System.Int32" Scope="User">
+    <Setting Name="SackMaxWeight" Type="System.Single" Scope="User">
       <Value Profile="(Default)">1000</Value>
     </Setting>
     <Setting Name="CoreMaxWeight" Type="System.Single" Scope="User">
@@ -58,6 +55,9 @@
     </Setting>
     <Setting Name="TareMinWeight" Type="System.Single" Scope="User">
       <Value Profile="(Default)">11</Value>
+    </Setting>
+    <Setting Name="BagMaxWeight" Type="System.Single" Scope="User">
+      <Value Profile="(Default)">10</Value>
     </Setting>
   </Settings>
 </SettingsFile>
