Planta 3. Principal en avance
Listo

--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -84,6 +84,9 @@
       <setting name="BagMaxWeight" serializeAs="String">
         <value>10</value>
       </setting>
+      <setting name="PL2Tolerance" serializeAs="String">
+        <value>5</value>
+      </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
 </configuration>
