--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -87,6 +87,9 @@
       <setting name="PL2Tolerance" serializeAs="String">
         <value>5</value>
       </setting>
+      <setting name="PL3Tolerance" serializeAs="String">
+        <value>5</value>
+      </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
 </configuration>
