--- a/WOW-Fusion/WOW-Fusion.csproj
+++ b/WOW-Fusion/WOW-Fusion.csproj
@@ -394,6 +394,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo_ico_wow.ico" />
+    <None Include="Resources\item.png" />
     <None Include="Resources\wowgroup.png" />
     <None Include="Resources\zero.png" />
     <None Include="Resources\sack_empty.png" />
